table name change

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-export TABLE_NAME=minilm_table
+export TABLE_NAME=content_aware_chunking
 export EMB_MODEL=sentence-transformers/all-MiniLM-L6-v2
 export TOP_K=5
 export HF_MODEL=mistralai/Mistral-7B-Instruct-v0.2
