added reranking to semantic search

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ export EMB_MODEL=sentence-transformers/all-MiniLM-L6-v2
 export TOP_K=5
 export HF_MODEL=mistralai/Mistral-7B-Instruct-v0.2
 export OPENAI_MODEL=gpt-4-turbo-preview
+export CROSS_ENC_MODEL=cross-encoder/ms-marco-MiniLM-L-6-v2
 
 #### SECRETS ####
 export OPENAI_API_KEY=
