--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-export TABLE_NAME=content_aware_chunking
-export EMB_MODEL=sentence-transformers/all-MiniLM-L6-v2
+export TABLE_NAME=nltk_chunking_BAAI #nltk_chunking_BAAI # content_aware_chunking
+export EMB_MODEL=BAAI/bge-large-en-v1.5 # BAAI/bge-large-en-v1.5 # sentence-transformers/all-MiniLM-L6-v2
 export TOP_K=5
-export HF_MODEL=mistralai/Mistral-7B-Instruct-v0.2 # mistralai/Mistral-7B-v0.1 # mistralai/Mixtral-8x7B-Instruct-v0.1
+export HF_MODEL=mistralai/Mistral-7B-v0.1 # mistralai/Mistral-7B-Instruct-v0.2 # mistralai/Mistral-7B-v0.1 # mistralai/Mixtral-8x7B-Instruct-v0.1
 export OPENAI_MODEL=gpt-4-turbo-preview
 export CROSS_ENC_MODEL=cross-encoder/ms-marco-MiniLM-L-6-v2
 
